jade template used

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "grunt-cli": "^0.1.13",
     "inflight": "1.0.4",
     "inherits": "2.0.1",
-    "jade": "0.26.3",
+    "jade": "^0.26.3",
     "js-tokens": "1.0.2",
     "jstransform": "10.1.0",
     "lodash": "2.4.2",
